--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -213,6 +213,7 @@ library
                      , Hasura.GraphQL.Validate.InputValue
 
                      , Hasura.GraphQL.Resolve
+                     , Hasura.GraphQL.Resolve.LiveQuery.Generic
                      , Hasura.GraphQL.Resolve.LiveQuery
                      , Hasura.GraphQL.Resolve.BoolExp
                      , Hasura.GraphQL.Resolve.Context
