update tests, all tests assumes strigify numeric config is true

--- a/server/tests-py/queries/v1/update/basic/product_mul_price.yaml
+++ b/server/tests-py/queries/v1/update/basic/product_mul_price.yaml
@@ -32,7 +32,7 @@ response:
   returning:
   - product_id: 2
     name: Product 2
-    price: 16.5
+    price: '16.5000'
 query:
   type: update
   args:
