--- a/server/tests-py/queries/graphql_mutation/insert/basic/insert_various_postgres_types.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/basic/insert_various_postgres_types.yaml
@@ -8,10 +8,10 @@
         - c1_smallint: 32767
           c2_integer: 2147483647
           c3_bigint: "9223372036854775807"
-          c4_decimal: 123.45
-          c5_numeric: 1.234
+          c4_decimal: "123.45"
+          c5_numeric: "1.234"
           c6_real: 0.00390625
-          c7_double_precision: 16.0001220703125
+          c7_double_precision: "16.0001220703125"
           c8_smallserial: 1
           c9_serial: 1
           c10_bigserial: "1"
