add migrations and update script

--- a/.circleci/server-upgrade/Dockerfile
+++ b/.circleci/server-upgrade/Dockerfile
@@ -1,24 +1,21 @@
-FROM ubuntu:18.04
+FROM node:11-slim
 
-ARG abs_version=1.2.0
-
-RUN curl -sL https://deb.nodesource.com/setup_11.x | bash - \
-&& apt-get install -y nodejs \
-&& npm install -g yarn
-
-RUN apt-get install -y \
-    curl \
-    gnupg \
-    libpq5
-
-RUN curl -Lo /bin/abs https://github.com/abs-lang/abs/releases/download/${abs_version}/abs-${abs_version}-linux-amd64 \
-    && chmod +x /bin/abs
+#RUN apt-get update && apt-get install -y \
+#    curl \
+#    gnupg \
+#    libpq5
+#
+#RUN curl -sL https://deb.nodesource.com/setup_11.x | bash - \
+#    && apt-get install -y nodejs \
+#    && npm install -g yarn
 
 RUN curl -L https://github.com/hasura/graphql-engine/raw/master/cli/get.sh | INSTALL_PATH=/bin bash
 
 WORKDIR /
 
 COPY api-server /api-server
-RUN cd /api-server && yarn install
+RUN yarn --cwd /api-server install
 
 COPY hasura /hasura
+COPY run.sh run.sh
+COPY test_query.json test_query.json
