--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,6 +336,29 @@ jobs:
         paths:
           - _console_output
 
+  # test server upgrade from last version to current build
+  test_server_upgrade:
+    docker:
+    - image: hasura/graphql-engine-upgrade-tester:0.2
+      environment:
+        HASURA_GRAPHQL_DATABASE_URL: postgres://gql_test:@localhost:5432/gql_test
+    - image: circleci/postgres:10-alpine
+      environment:
+        POSTGRES_USER: gql_test
+        POSTGRES_DB: gql_test
+    working_directory: ~/graphql-engine
+    steps:
+    - checkout
+    - attach_workspace:
+        at: /build
+    - run:
+        name: upgrade_test 
+        command: .circleci/server-upgrade/run.sh
+    - persist_to_workspace:
+        root: /build
+        paths:
+          - _server_output
+    
   deploy:
     docker:
     - image: hasura/graphql-engine-deployer:v0.3
@@ -374,6 +397,10 @@ workflows:
         <<: *filter_only_vtags
         requires:
         - build_server
+    - test_server_upgrade:
+        <<: *filter_only_vtags
+        requires:
+        - build_server
     - all_server_tests_pass:
         <<: *filter_only_vtags
         requires:
@@ -381,6 +408,7 @@ workflows:
         - pytest_server_pg_10.6
         - pytest_server_pg_9.6
         - pytest_server_pg_9.5
+        - test_server_upgrade
     - test_cli_with_last_release:
         <<: *filter_only_vtags
     - test_and_build_cli:
