add netcat and libpq

--- a/.circleci/server-upgrade/Dockerfile
+++ b/.circleci/server-upgrade/Dockerfile
@@ -1,10 +1,9 @@
 FROM node:11-slim
 
-#RUN apt-get update && apt-get install -y \
-#    curl \
-#    gnupg \
-#    libpq5
-#
+RUN apt-get update && apt-get install -y \
+    libpq5 \
+    netcat
+
 #RUN curl -sL https://deb.nodesource.com/setup_11.x | bash - \
 #    && apt-get install -y nodejs \
 #    && npm install -g yarn
