--- a/.circleci/server-upgrade/Dockerfile
+++ b/.circleci/server-upgrade/Dockerfile
@@ -2,19 +2,5 @@ FROM node:11-slim
 
 RUN apt-get update && apt-get install -y \
     libpq5 \
-    netcat
-
-#RUN curl -sL https://deb.nodesource.com/setup_11.x | bash - \
-#    && apt-get install -y nodejs \
-#    && npm install -g yarn
-
-RUN curl -L https://github.com/hasura/graphql-engine/raw/master/cli/get.sh | INSTALL_PATH=/bin bash
-
-WORKDIR /
-
-COPY api-server /api-server
-RUN yarn --cwd /api-server install
-
-COPY hasura /hasura
-COPY run.sh run.sh
-COPY test_query.json test_query.json
+    netcat \
+    && curl -L https://github.com/hasura/graphql-engine/raw/master/cli/get.sh | INSTALL_PATH=/bin bash
