--- a/community/tools/graphql2chartjs/package.json
+++ b/community/tools/graphql2chartjs/package.json
@@ -1,12 +1,13 @@
 {
   "name": "graphql2chartjs",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "rm -rf lib && ./node_modules/.bin/babel src --out-dir lib",
-    "launch": "yarn compile && yarn publish"
+    "bundle": "rm -rf bundle/js && ./node_modules/.bin/rollup -c",
+    "launch": "yarn compile && yarn bundle && yarn publish"
   },
   "author": "Hasura",
   "repository": "hasura/graphql-engine",
@@ -20,7 +21,7 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "browserify": "^16.2.3",
-    "eslint-plugin-react": "^7.12.4",
+    "rollup": "^1.3.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-filesize": "^6.0.1",
