--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -222,6 +222,7 @@ library
                      , Data.Sequence.NonEmpty
                      , Data.TByteString
                      , Data.HashMap.Strict.InsOrd.Extended
+                     , Data.Parser.JSONPath
 
                      , Hasura.SQL.DML
                      , Hasura.SQL.Types
