--- a/console/package.json
+++ b/console/package.json
@@ -57,7 +57,7 @@
     "brace": "^0.11.1",
     "deep-equal": "^1.0.1",
     "graphiql": "^0.11.11",
-    "graphiql-explorer": "^0.3.7",
+    "graphiql-explorer-hasura": "0.0.5",
     "graphql": "^14.0.2",
     "hasura-console-graphiql": "0.0.10",
     "history": "^3.0.0",
