--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@
 refs:
   skip_job_on_ciignore: &skip_job_on_ciignore
     run: |
+      ls -l /build
       echo "halting job due to /build/skip_job.txt"
       circleci-agent step halt
   wait_for_postgres: &wait_for_postgres
