--- a/community/sample-apps/whatsapp-clone-typescript-react/auth-server/package.json
+++ b/community/sample-apps/whatsapp-clone-typescript-react/auth-server/package.json
@@ -24,16 +24,19 @@
     "bcrypt": "3.0.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "cloudinary": "^1.13.2",
     "cors": "^2.8.5",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
+    "multer": "^1.4.1",
     "objection": "^1.3.0",
     "objection-db-errors": "^1.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg": "^7.5.0"
+    "pg": "^7.5.0",
+    "tmp": "0.0.33"
   }
 }
