--- a/community/sample-apps/whatsapp-clone-typescript-react/react-app/codegen.yml
+++ b/community/sample-apps/whatsapp-clone-typescript-react/react-app/codegen.yml
@@ -1,13 +1,11 @@
 schema:
   - http://localhost:8080/v1alpha1/graphql:
-      headers:
-        x-hasura-admin-secret: <>
+      #headers:
+      #  x-hasura-admin-secret: 
 documents:
   - ./src/**/*.tsx
   - ./src/**/*.ts
 overwrite: true
-#require:
-#  - ts-node/../../codegen-interpreter.ts
 generates:
   ./src/graphql/types.ts:
     plugins:
