add user flag to pgbouncer command

--- a/.circleci/pgbouncer/pgbouncer.ini
+++ b/.circleci/pgbouncer/pgbouncer.ini
@@ -7,5 +7,5 @@ listen_addr = 127.0.0.1
 logfile = pgbouncer.log
 pidfile = pgbouncer.pid
 auth_type = md5
-auth_file = pgbouncer/users.txt
+auth_file = .circleci/pgbouncer/users.txt
 admin_users = postgres
