--- a/server/tests-py/queries/horizontal_scale/basic/teardown.yaml
+++ b/server/tests-py/queries/horizontal_scale/basic/teardown.yaml
@@ -1,10 +1,12 @@
 type: bulk
 args:
-- type: run_sql
-  args:
-    sql: |
-      drop table test_t1;
+- type: clear_metadata
+  args: {}
 - type: run_sql
   args:
     sql: |
       drop table test_t2;
+- type: run_sql
+  args:
+    sql: |
+      drop table test_t1;
