--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -16,8 +16,8 @@ packages:
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
 # use https URLs so that build systems can clone these repos
-- git: https://github.com/hasura/pg-client-hs.git
-  commit: f3d1e9e67bdfbfa3de85b7cbdb4c557dce7fd84d
+- git: https://github.com/rakeshkky/pg-client-hs.git
+  commit: dd1c728229b0a64b7ba7d4923acadcf57cf2e4a5
 - git: https://github.com/hasura/graphql-parser-hs.git
   commit: ff95d9a96aa5ef9e5390f8712958e4118e3831f6
 - ginger-0.8.1.0
@@ -30,6 +30,9 @@ extra-deps:
 # jose for the x5t bugfix (0.8.0.0)
 - git: https://github.com/frasertweedale/hs-jose.git
   commit: d47572fb0650ac6cc2c9e00711c7f99132d897cb
+
+# for pg-client-hs
+- select-0.4.0.1
 
 
 # Override default flag values for local packages and extra-deps
