Add --verbose-api-response flag/HASURA_GRAPHQL_VERBOSE_API_RESPONSE envVar to control verbose responses in the API

--- a/server/tests-py/queries/v1/insert/permissions/author_user_role_insert_check_is_registered_fail.yaml
+++ b/server/tests-py/queries/v1/insert/permissions/author_user_role_insert_check_is_registered_fail.yaml
@@ -6,7 +6,7 @@ headers:
   X-Hasura-User-Id: '5'
 response:
   path: $.args
-  error: Check constraint violation. insert check constraint failed
+  error: Insert permission check failed
   code: permission-error
 query:
   type: insert
