--- a/server/tests-py/queries/remote_schemas/tbls_setup.yaml
+++ b/server/tests-py/queries/remote_schemas/tbls_setup.yaml
@@ -14,6 +14,13 @@ args:
     schema: public
     name: hello
 
+- type: run_sql
+  args:
+    sql: |
+      INSERT INTO hello (code, name) VALUES
+      ('felu', 'Pradosh C Mitter'),
+      ('holmes', 'Sherlock Holmes')
+
 - type: add_remote_schema
   args:
     name: simple2-graphql
