Fix errors on adding function etc

--- a/server/tests-py/queries/graphql_mutation/insert/basic/insert_into_array_col_with_array_input.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/basic/insert_into_array_col_with_array_input.yaml
@@ -5,7 +5,7 @@
     data:
       insert_test_types:
         returning:
-          c34_text_array: ["a","b","c"]
+        - c34_text_array: ["a","b","c"]
   status: 200
   query:
     variables:
