--- a/server/tests-py/queries/graphql_mutation/insert/geojson/insert_landmark_single_position_err.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/geojson/insert_landmark_single_position_err.yaml
@@ -4,7 +4,7 @@ status: 400
 response:
   errors:
   - extensions:
-      path: '$.variableValues[0].location.coordinates'
+      path: $.variables.landmarks[0].location.coordinates
       code: parse-failed
     message: A Position needs at least 2 elements
 query:
