--- a/server/tests-py/queries/graphql_mutation/insert/geojson/insert_road_single_point_err.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/geojson/insert_road_single_point_err.yaml
@@ -4,7 +4,7 @@ status: 400
 response:
   errors:
   - extensions:
-      path: $.variableValues[0].path.coordinates
+      path: $.variables.roads[0].path.coordinates
       code: parse-failed
     message: A LineString needs at least 2 Positions
 query:
@@ -17,7 +17,7 @@ query:
         type: LineString
   query: |
     mutation insertRoad($roads: [road_insert_input!]!) {
-      insert_straight_road(objects: $roads) {
+      insert_road(objects: $roads) {
         returning{
           id
           name
