--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,10 @@ refs:
     - *wait_for_postgres
     - run:
         name: Install deps
+        # if the man directories are missing, postgresql-client fails
+        # to install in debian
         command: |
+          mkdir -p /usr/share/man/man{1,7}
           apt-get update
           apt install --yes pgbouncer jq curl postgresql-client
     - run:
