--- a/console/package.json
+++ b/console/package.json
@@ -57,8 +57,9 @@
     "brace": "^0.11.1",
     "deep-equal": "^1.0.1",
     "graphiql": "^0.11.11",
-    "graphql": "^0.13.2",
-    "hasura-console-graphiql": "0.0.8",
+    "graphiql-explorer-hasura": "0.0.7",
+    "graphql": "^14.0.2",
+    "hasura-console-graphiql": "0.0.10",
     "history": "^3.0.0",
     "hoist-non-react-statics": "^1.0.3",
     "invariant": "^2.2.0",
