add type, variable information to input value's ast

--- a/server/tests-py/queries/graphql_query/boolexp/postgis/query_using_polygon.yaml
+++ b/server/tests-py/queries/graphql_query/boolexp/postgis/query_using_polygon.yaml
@@ -134,7 +134,7 @@ query:
         - - 2
           - 0
   query: |
-    query geom_table($polygon: geometry){
+    query geom_table($polygon: geometry!){
       st_d_within_2: geom_table(where: {geom_col: {_st_d_within: {distance: 2 from: $polygon}}}){
         id
         geom_col
