Tests for JSON arrays in session variables

--- a/server/tests-py/queries/graphql_query/permissions/setup.yaml
+++ b/server/tests-py/queries/graphql_query/permissions/setup.yaml
@@ -78,6 +78,7 @@ args:
       - title
       - content
       - is_published
+      - author_id
       filter:
         is_published: true
 
@@ -379,6 +380,19 @@ args:
       filter:
         jsonb_col:
           $has_key: X-Hasura-Has-Key
+
+# Using jsonb column and $nin operator
+- type: create_select_permission
+  args:
+    table: jsonb_table
+    role: user3
+    permission:
+      columns:
+      - id
+      - jsonb_col
+      filter:
+        jsonb_col:
+          $nin: X-Hasura-Protected-Jsons
 
 #Insert data
 - type: insert
