--- a/server/tests-py/queries/graphql_mutation/delete/permissions/setup.yaml
+++ b/server/tests-py/queries/graphql_mutation/delete/permissions/setup.yaml
@@ -6,7 +6,7 @@ args:
   args:
     sql: |
       create table author(
-          id serial primary key, 
+          id serial primary key,
           name text unique,
           payments_done boolean not null default false
       );
@@ -148,3 +148,25 @@ args:
     permission:
       filter:
         id: X-Hasura-Resident-Id
+
+- type: create_delete_permission
+  args:
+    table: resident
+    role: agent
+    permission:
+      filter:
+        id:
+          $in: X-Hasura-Allowed-Resident-Ids
+
+- type: create_select_permission
+  args:
+    table: resident
+    role: agent
+    permission:
+      columns:
+      - id
+      - name
+      - age
+      filter:
+        id:
+          $in: X-Hasura-Allowed-Resident-Ids
