--- a/server/tests-py/queries/graphql_mutation/insert/permissions/setup.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/permissions/setup.yaml
@@ -107,6 +107,19 @@ args:
           - author_id: X-HASURA-USER-ID
           - is_published: true
 
+#Article select permission for editor
+- type: create_select_permission
+  args:
+    table: article
+    role: editor
+    permission:
+      columns: '*'
+      filter:
+        $or:
+          - author_id:
+              $in: X-Hasura-Allowed-User-Ids
+          - is_published: true
+
 #Article insert permission for user
 - type: create_insert_permission
   args:
@@ -115,6 +128,17 @@ args:
     permission:
       check:
         author_id: X-Hasura-User-Id
+
+#Article insert permission for editor
+#Editor can create articles for some of the users
+- type: create_insert_permission
+  args:
+    table: article
+    role: editor
+    permission:
+      check:
+        author_id:
+          $in: X-Hasura-Allowed-User-Ids
 
 #Article udpate permission for user
 - type: create_update_permission
