--- a/community/sample-apps/whatsapp-clone-typescript-react/react-app/public/manifest.json
+++ b/community/sample-apps/whatsapp-clone-typescript-react/react-app/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WhatsApp Clone",
+  "name": "WhatsApp Clone",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
