--- a/community/boilerplates/remote-schemas/rest-wrapper/package.json
+++ b/community/boilerplates/remote-schemas/rest-wrapper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-remote-schema",
   "version": "1.0.0",
-  "description": "This is a GraphQL backend boilerplate in nodejs that can be deployed on AWS Lambda.",
+  "description": "This is a GraphQL backend to wrap a REST API.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
