--- a/community/tools/graphiql-online/Dockerfile
+++ b/community/tools/graphiql-online/Dockerfile
@@ -9,7 +9,7 @@ RUN npm -g install serve
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json ./
 
-RUN npm install
+RUN npm ci
 
 # Bundle app source
 COPY . /app
