--- a/community/tools/graphiql-online/package.json
+++ b/community/tools/graphiql-online/package.json
@@ -20,7 +20,7 @@
     "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run start-dev\" ",
     "cypress": "cypress open",
     "test": "cypress run --spec 'cypress/integration/test_complete.js' --config baseUrl=$CYPRESS_BASE_URL",
-    "deploy": "now --docker --public && now alias && now alias hasura-graphiql.now.sh graphiql-online.com"
+    "deploy": "now --public && now alias && now alias hasura-graphiql.now.sh graphiql-online.com"
   },
   "betterScripts": {
     "start-prod": {
