--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,12 +96,15 @@ refs:
     - checkout
     - restore_cache:
         keys:
-        - server-cache-v1-{{ checksum "server/graphql-engine.cabal" }}-{{ checksum "server/stack.yaml" }}
+        - server-app-cache-{{ .Branch }}-{{ .Revision }}
+    - restore_cache:
+        keys:
+        - server-deps-cache-{{ checksum "server/graphql-engine.cabal" }}-{{ checksum "server/stack.yaml" }}
     - *wait_for_postgres
     - run:
-        name: Install test dependencies
-        # if the man directories are missing, postgresql-client fails to
-        # install in debian
+        name: Install deps
+        # if the man directories are missing, postgresql-client fails
+        # to install in debian
         command: |
           mkdir -p /usr/share/man/man{1,7}
           apt-get update
@@ -155,7 +158,10 @@ jobs:
     - *setup_remote_docker
     - restore_cache:
         keys:
-        - server-cache-v1-{{ checksum "server/graphql-engine.cabal" }}-{{ checksum "server/stack.yaml" }}
+        - server-deps-cache-{{ checksum "server/graphql-engine.cabal" }}-{{ checksum "server/stack.yaml" }}
+    - restore_cache:
+        keys:
+        - server-app-cache-{{ .Branch }}-{{ .Revision }}
     - run:
         name: Build the server
         working_directory: ./server
@@ -171,10 +177,13 @@ jobs:
           make ci-image
           make ci-save-image
     - save_cache:
-        key: server-cache-v1-{{ checksum "server/graphql-engine.cabal" }}-{{ checksum "server/stack.yaml" }}
+        key: server-app-cache-{{ .Branch }}-{{ .Revision }}
+        paths:
+        - ./server/.stack-work
+    - save_cache:
+        key: server-deps-cache-{{ checksum "server/graphql-engine.cabal" }}-{{ checksum "server/stack.yaml" }}
         paths:
         - ~/.stack
-        - ./server/.stack-work
     - store_artifacts:
         path: /build/_server_output
         destination: server
