--- a/server/tests-py/queries/v1/select/boolexp/postgis/setup.yaml
+++ b/server/tests-py/queries/v1/select/boolexp/postgis/setup.yaml
@@ -24,6 +24,19 @@ args:
     name: geom_table
     schema: public
 
+- type: run_sql
+  args:
+    sql: |
+      CREATE TABLE geog_table(
+        id SERIAL PRIMARY KEY,
+        name TEXT NOT NULL,
+        geog_col geography NOT NULL
+      );
+- type: track_table
+  args:
+    name: geog_table
+    schema: public
+
 #Insert data
 - type: run_sql
   args:
@@ -36,3 +49,14 @@ args:
       ('polygon', ST_GeomFromText('POLYGON((0 0, 0 1, 1 1, 1 0, 0 0))')),
       ('polygon', ST_GeomFromText('POLYGON((2 0, 2 1, 3 1, 3 0, 2 0))'))
       ;
+- type: run_sql
+  args:
+    sql: |
+      INSERT INTO geog_table (name, geog_col)
+      VALUES
+      ('London', ST_GeographyFromText('POINT(0.1278 51.5074)') ),
+      ('Paris',  ST_GeographyFromText('POINT(2.3522 48.8566)') ),
+      ('Moscow', ST_GeographyFromText('POINT(37.6173 55.7558)') ),
+      ('New York', ST_GeographyFromText('POINT(-74.0060 40.7128)') ),
+      ('Linestring', ST_GeographyFromText('SRID=4326;LINESTRING(-43.23456 72.4567,-43.23456 72.4568)')),
+      ('Point', ST_GeographyFromText('SRID=4326;POINT(-43.23456 72.4567772)'));
