--- a/server/tests-py/queries/v1/select/permissions/setup.yaml
+++ b/server/tests-py/queries/v1/select/permissions/setup.yaml
@@ -249,6 +249,70 @@ args:
       ('polygon', ST_GeomFromText('POLYGON((2 0, 2 1, 3 1, 3 0, 2 0))'))
       ;
 
+#Permission based on Geography columns
+
+- type: run_sql
+  args:
+    sql: |
+      CREATE TABLE geog_table(
+        id SERIAL PRIMARY KEY,
+        name TEXT NOT NULL,
+        geog_col geography NOT NULL
+      );
+- type: track_table
+  args:
+    name: geog_table
+    schema: public
+
+- type: create_select_permission
+  args:
+    table: geog_table
+    role: postgis_user1
+    permission:
+      columns:
+      - id
+      - name
+      - geog_col
+      filter:
+        geog_col:
+          $st_intersects:
+            type: Point
+            coordinates:
+            - -43.23456
+            - 72.4567772
+            crs:
+              type: name
+              properties:
+                name: urn:ogc:def:crs:EPSG::4326
+
+- type: create_select_permission
+  args:
+    table: geog_table
+    role: postgis_user2
+    permission:
+      columns:
+      - id
+      - name
+      - geog_col
+      filter:
+        geog_col:
+          $st_d_within:
+            distance: X-Hasura-Geog-Dist
+            from: X-Hasura-Geog-From
+            use_spheroid: X-Hasura-Geog-Sph
+
+- type: run_sql
+  args:
+    sql: |
+      INSERT INTO geog_table (name, geog_col)
+      VALUES
+      ('London', ST_GeographyFromText('POINT(0.1278 51.5074)') ),
+      ('Paris',  ST_GeographyFromText('POINT(2.3522 48.8566)') ),
+      ('Moscow', ST_GeographyFromText('POINT(37.6173 55.7558)') ),
+      ('New York', ST_GeographyFromText('POINT(-74.0060 40.7128)') ),
+      ('Linestring', ST_GeographyFromText('SRID=4326;LINESTRING(-43.23456 72.4567,-43.23456 72.4568)')),
+      ('Point', ST_GeographyFromText('SRID=4326;POINT(-43.23456 72.4567772)'));
+
 #Permission based on JSONB operators
 - type: run_sql
   args:
