--- a/server/tests-py/queries/v1/select/permissions/teardown.yaml
+++ b/server/tests-py/queries/v1/select/permissions/teardown.yaml
@@ -6,5 +6,6 @@ args:
       DROP TABLE article;
       DROP TABLE author;
       DROP TABLE geom_table;
+      DROP TABLE geog_table;
       DROP TABLE jsonb_table;
     cascade: true
