add a json path argument to query values inside json columns (close #1598) (#1661)

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -231,6 +231,7 @@ library
                      , Data.Sequence.NonEmpty
                      , Data.TByteString
                      , Data.HashMap.Strict.InsOrd.Extended
+                     , Data.Parser.JSONPath
 
                      , Hasura.SQL.DML
                      , Hasura.SQL.Types
