added basic commands metadata track and untrack

--- a/cli/Gopkg.toml
+++ b/cli/Gopkg.toml
@@ -95,3 +95,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/kardianos/osext"
+
+[[constraint]]
+  name = "github.com/gobuffalo/flect"
+  version = "0.1.1"
