--- a/server/tests-py/queries/graphql_query/permissions/setup.yaml
+++ b/server/tests-py/queries/graphql_query/permissions/setup.yaml
@@ -428,3 +428,50 @@ args:
       - id
       - student_name
       filter: {}
+
+#Person table
+- type: run_sql
+  args:
+    sql: |
+      CREATE TABLE person (
+        id serial primary key,
+        first_name text not null,
+        last_name text not null
+      );
+
+      INSERT INTO person
+      (first_name, last_name) VALUES
+      ('taylor', 'chris'),
+      ('clarke', 'michael');
+
+      CREATE FUNCTION full_name(person person) RETURNS text AS $$
+       SELECT  person.last_name || ' ' || person.first_name
+      $$ LANGUAGE sql STABLE;
+
+      CREATE FUNCTION full_name_prefix(person, prefix text) RETURNS text AS $$
+       SELECT  prefix || ' ' || $1.last_name || ' ' || $1.first_name
+      $$ LANGUAGE sql STABLE;
+
+- type: track_table
+  args:
+    name: person
+    schema: public
+- type: track_function
+  args:
+    name: full_name
+    schema: public
+- type: track_function
+  args:
+    name: full_name_prefix
+    schema: public
+
+- type: create_select_permission
+  args:
+    table: person
+    role: user
+    permission:
+      columns: '*'
+      computed_columns:
+      - full_name_prefix
+      filter:
+        id: X-Hasura-Person-Id
