--- a/server/tests-py/queries/graphql_query/permissions/teardown.yaml
+++ b/server/tests-py/queries/graphql_query/permissions/teardown.yaml
@@ -1,5 +1,9 @@
 type: bulk
 args:
+- type: drop_select_permission
+  args:
+    table: person
+    role: user
 - type: run_sql
   args:
     sql: |
@@ -10,4 +14,7 @@ args:
       DROP TABLE geom_table;
       DROP TABLE jsonb_table;
       DROP TABLE gpa cascade;
+      DROP FUNCTION full_name;
+      DROP FUNCTION full_name_prefix;
+      DROP TABLE person; 
     cascade: true
