--- a/server/tests-py/queries/graphql_query/basic/teardown.yaml
+++ b/server/tests-py/queries/graphql_query/basic/teardown.yaml
@@ -1,11 +1,6 @@
 type: bulk
 args:
 
-- type: run_sql
-  args:
-    sql: |
-      drop table test_types
-
 #Drop relationship first
 - type: drop_relationship
   args:
@@ -17,12 +12,11 @@ args:
 - type: run_sql
   args:
     sql: |
+      DROP TABLE test_types;
       DROP TABLE article;
       DROP TABLE author;
       DROP TABLE "user";
       DROP TYPE complex;
       DROP TYPE inventory_item;
-      DROP FUNCTION full_name;
-      DROP FUNCTION full_name_prefix;
-      DROP TABLE person; 
+      DROP TABLE person cascade; 
     cascade: true
