--- a/community/learn/graphql-tutorials/backend-services/graphiql/package.json
+++ b/community/learn/graphql-tutorials/backend-services/graphiql/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphqurl-graphiql",
+  "name": "graphql-tutorials-graphiql",
   "description": "Explore GraphQL APIs with headers",
   "author": "Hasura (https://github.com/hasura/graphql-engine)",
   "license": "MIT",
