--- a/server/tests-py/queries/remote_schemas/basic_subscription_not_supported.yaml
+++ b/server/tests-py/queries/remote_schemas/basic_subscription_not_supported.yaml
@@ -4,9 +4,9 @@ status: 400
 response:
   errors:
   - extensions:
-      code: not-supported
+      code: unexpected-payload
       path: $
-    message: subscription to remote server is not supported
+    message: subscriptions are not supported over HTTP, use websockets instead
 query:
   query: |
     subscription {
